--- a/index.html
+++ b/index.html
@@ -83,12 +83,22 @@
       <!-- Footer -->
       <footer>
         <p>
-          &copy; 2024 Discover Nepal | Powered By
+          &copy; 2024 Discover Nepal | Proudly Powered By
           <a href="https://anantarajshrestha.com.np">Er.ANANTA RAJ SHRESTHA</a
           >All Rights Reserved
         </p>
       </footer>
+      <!-- Overlay (optional, darkens the background) -->
+      <div id="overlay"></div>
 
+      <!-- Pop-up box -->
+      <div id="popup">
+        <p>
+          Do you want to make your own portfolio with us? Just DM at
+          <strong>er@anantarajshrestha.com.np</strong>
+        </p>
+        <button class="skip-button" onclick="closePopup()">Skip</button>
+      </div>
       <script src="script.js"></script>
     </div>
   </body>
