--- a/index.html
+++ b/index.html
@@ -97,8 +97,21 @@
           Do you want to make your own portfolio with us? Just DM at
           <strong>er@anantarajshrestha.com.np</strong>
         </p>
-        <button class="skip-button" onclick="closePopup()">Skip</button>
+        <button class="skip-button" onclick="closePopuped()">Skip</button>
       </div>
+      <script>
+        // Function to display the pop-up after 5 seconds
+        setTimeout(function () {
+          document.getElementById("popup").style.display = "block";
+          document.getElementById("overlay").style.display = "block";
+        }, 5000); // 5 seconds delay
+
+        // Function to close the pop-up
+        function closePopuped() {
+          document.getElementById("popup").style.display = "none";
+          document.getElementById("overlay").style.display = "none";
+        }
+      </script>
       <script src="script.js"></script>
     </div>
   </body>
