--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <li><a href="#destinations">Destinations</a></li>
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="https://blog.discovernepal.me">Blog</a></li>
+            <li><a href="https://visit.discovernepal.me">Visit</a></li>
             <li><a href="#book" class="cta">Book Now</a></li>
           </ul>
         </nav>
@@ -84,8 +86,8 @@
       <footer>
         <p>
           &copy; 2024 Discover Nepal | Proudly Powered By
-          <a href="https://anantarajshrestha.com.np">Er.ANANTA RAJ SHRESTHA</a
-          >All Rights Reserved
+          <a href="https://anantarajshrestha.com.np">Er.ANANTA RAJ SHRESTHA</a>
+          All Rights Reserved. | Last Updated: <span id="lastUpdated"></span>
         </p>
       </footer>
       <!-- Overlay (optional, darkens the background) -->
